# course-ml-zoomcamp

./: README.md
01-intro/: 01_intro_homework.ipynb
02-regression/: 02_regression_homework.ipynb
03-classification/: 03_classification_homework.ipynb
04-evaluation/: 04_evaluation_homework.ipynb
05-deployment/: 05_deployment_homework.ipynb  Dockerfile  fastapi_app.py  predict_v2.py  pyproject.toml
06-trees/: 06_trees_homework.ipynb
07-midterm_project/: 07-midterm project.ipynb  Dockerfile  README.md  predict.py  pyproject.toml  test_request.py
08-deep-learning/: 08_deep_learning_homework.ipynb
09-kubernetes/: 09_kubernetes_homework.ipynb  lambda_function.py
09-serverless/: 09_serverless_homework.ipynb  Dockerfile
10-kubernetes/: 10_kubernetes_homework.ipynb
week-01-intro/: week-01-intro-homework.ipynb
week-02-regression/: week-02-regression-homework.ipynb
