[project]
name = "midterm-project"
version = "0.1.0"
description = "Midterm project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "scikit-learn==1.6.1",
    "uvicorn[standard]>=0.38.0",
    "xgboost>=3.1.1",
]
